--- a/src/pages/Profile/styles.css
+++ b/src/pages/Profile/styles.css
@@ -4,7 +4,7 @@
 }
 
 .ProfileCardCol {
-  border-right: 1px solid var(--border-color);
+  border-right: 1px solid var(--store-border-color);
   padding: 0;
 }
 
